--- a/livraria/WebContent/WEB-INF/web.xml
+++ b/livraria/WebContent/WEB-INF/web.xml
@@ -6,6 +6,10 @@
 	
 	<display-name>livraria</display-name>
 	
+	<welcome-file-list>
+		<welcome-file>login.xhtml</welcome-file>
+	</welcome-file-list>
+	
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
